# etrobo_simulator

./: AGENTS.md  CMakeLists.txt  README.md  gazebo_models_hook.sh.in  package.xml
launch/: etrobo_world.launch.py  robot_state_publisher.launch.py  spawn_etrobo_spike.launch.py
models/etrobo_course/: model.config  model.sdf
models/etrobo_course/materials/scripts/: course.material  gazebo.material
models/etrobo_spike/: model.config  model.sdf
src/gazebo_ros_color_sensor/: gazebo_ros_color_sensor.cpp
urdf/: etrobo_spike.urdf  model.sdf
worlds/: etrobo_world.world
